--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -182,3 +182,4 @@ mark_xulichongji: 'https://seer2-resource.yuuinih.com/png/markImage/3161.png'
 mark_fenshen: 'https://seer2-resource.yuuinih.com/png/markImage/3184.png'
 mark_fenshenhying: 'https://seer2-resource.yuuinih.com/png/markImage/3185.png'
 mark_huafenmiman: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3200.png'
+mark_longlinjia: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/4013.png'
