--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -545,3 +545,17 @@ skill_fushidufeng: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main
 skill_xuruodufeng: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/06_2_001.mp3'
 skill_huandiedusha: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/06_2_002.mp3'
 skill_huandiemiwu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/06_3_003.mp3'
+skill_nuzhua: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_001.mp3'
+skill_baolongzhan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_002.mp3'
+skill_longlinjia: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_002.mp3'
+skill_huolongtuxi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_003.mp3'
+skill_shixuedaji: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_002.mp3'
+skill_julongzhita: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_003.mp3'
+skill_longzhinu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_001.mp3'
+skill_bomingbaoji: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_001.mp3'
+skill_pojiachuanji: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_002.mp3'
+skill_hongliannulongzhan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/10858.mp3'
+skill_longdeliliang: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_003.mp3'
+skill_kuanglongzhuilie: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_003.mp3'
+skill_huolongdetiequan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_002.mp3'
+skill_huolongdepaoxiao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_001.mp3'
