--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -1389,7 +1389,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_double_mark_liuxue_stack
+    - effect_skill_double_mark_liuxie_stack
 - id: skill_suixinci
   element: Grass
   category: Physical
@@ -3735,7 +3735,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_consume_maimaijinzhen_add_liuxue_50
+    - effect_skill_consume_maimaijinzhen_add_liuxie_50
 - id: skill_qianyinjinzhen
   element: Grass
   category: Special
@@ -3818,7 +3818,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_add_liuxue_50_foe
+    - effect_skill_add_liuxie_50_foe
 - id: skill_zuijiazhugong
   element: Normal
   category: Physical
@@ -6596,3 +6596,172 @@
   tags: []
   effect:
     - effect_skill_add_mark_foe_shuimian
+- id: skill_nuzhua
+  element: Dragon
+  category: Physical
+  target: opponent
+  power: 60
+  rage: 5
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_def_1_stage_5_percent
+- id: skill_baolongzhan
+  element: Dragon
+  category: Physical
+  target: opponent
+  power: 70
+  rage: 10
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_power_2x_if_self_full_hp
+- id: skill_longlinjia
+  element: Dragon
+  category: Status
+  target: self
+  power: 0
+  rage: 15
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_longlinjia
+- id: skill_huolongtuxi
+  element: Fire
+  category: Special
+  target: opponent
+  power: 85
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_shaoshang_if_hp_above_75_percent
+- id: skill_shixuedaji
+  element: Dragon
+  category: Physical
+  target: opponent
+  power: 90
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_heal_25_percent_damage_dealt
+- id: skill_julongzhita
+  element: Dragon
+  category: Physical
+  target: opponent
+  power: 95
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_liuxie_50_if_hp_above_half
+- id: skill_longzhinu
+  element: Dragon
+  category: Special
+  target: opponent
+  power: 85
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_rage_30_if_hp_below_half
+- id: skill_bomingbaoji
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 90
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_set_sure_crit_if_hp_below_quarter
+- id: skill_pojiachuanji
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 100
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_ignore_foe_stat_if_hp_above_quarter
+- id: skill_hongliannulongzhan
+  element: Dragon
+  category: Climax
+  target: opponent
+  power: 165
+  rage: 100
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_hunmi_5_percent
+- id: skill_longdeliliang
+  element: Dragon
+  category: Status
+  target: self
+  power: 0
+  rage: 20
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_atk_1_stage
+    - effect_skill_raise_spa_1_stage
+- id: skill_kuanglongzhuilie
+  element: Dragon
+  category: Physical
+  target: opponent
+  power: 90
+  rage: 25
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_spe_1_stage_if_hp_below_75_percent
+- id: skill_huolongdetiequan
+  element: Fire
+  category: Physical
+  target: opponent
+  power: 80
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_power_2x_if_hp_above_half
+- id: skill_huolongdepaoxiao
+  element: Fire
+  category: Special
+  target: opponent
+  power: 95
+  rage: 25
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_set_sure_crit_if_hp_below_half
