--- a/data/effect_mark.yaml
+++ b/data/effect_mark.yaml
@@ -2774,11 +2774,22 @@
     value: 1
   condition:
     type: petIsActive
-# 龙鳞甲：反弹受到伤害的50%
+# 龙鳞甲：反弹特攻伤害50%
 - id: effect_mark_longlinjia_reflect_damage_50_percent
   trigger: OnDamage
   condition:
-    type: selfBeDamaged
+    type: every
+    conditions:
+      - type: selfBeDamaged
+      - type: evaluate
+        target:
+          base: damageContext
+          chain:
+            - type: selectPath
+              arg: damageType
+        evaluator:
+          type: same
+          value: Special
   priority: 0
   apply:
     - type: dealDamage
