fix: Fix stat field name in effect_skill.yaml
Replaces the 'stat' field with 'statType' for consistency with the expected schema in the apply_self_statstage_+1_template effect.

--- a/data/effect_skill.yaml
+++ b/data/effect_skill.yaml
@@ -7810,7 +7810,7 @@
   priority: 0
   apply:
     <<: *apply_self_statstage_+1_template
-    stat: spe
+    statType: spe
   condition:
     type: every
     conditions:
